POM Files updated with latest IRIS version and unnecessary resources removed